# room-tui

./: .gitignore  .gitmodules  DESIGN.md  PACKAGING.md  README.md  pyproject.toml
docs/: user-guide.html  user-guide.md
installs/: README.md  WINDOWS_VM.md
installs/macos/: install.sh
installs/win/: install.bat  install.ps1
packaging/: config.example.toml  required-skills.txt  room-setup.iss  room.spec
scripts/: apply-room-pi-brand.py  build-binary.ps1  build-binary.sh  build-room-pi.ps1  build-room-pi.sh  build-windows-suite.ps1  check-script-encoding.py  fetch-c-toolchain-macos.sh  fetch-c-toolchain-windows.ps1  fetch-libreoffice-windows.ps1  install-global.sh  package-suite.ps1  package-suite.sh  verify-room-pi.py
scripts/lib/: copy-pi-runtime.sh  copy-required-skills.sh
scripts/patches/: room-pi-utf8-shell.patch
src/room_tui/: __init__.py  __main__.py  app.py  auth_setup.py  cli.py  config.py  console_title.py  new_run_flow.py  pi_catalog.py  pi_env.py  slash.py  ui_state.py  workspace.py
tests/: test_agent_history.py  test_auth_setup.py  test_c_toolchain.py  test_config_suite_bin.py  test_humanize_engine_error.py  test_message_queue.py  test_message_render.py  test_model_status.py  test_msg_layout.py  test_new_run_flow.py  test_orch_reset.py  test_pi_isolation.py  test_prompt_format.py  test_prompt_handle_chunks.py  test_prompt_history.py  test_rewind.py  test_scroll_follow.py  test_session_reclaim.py  test_skill_seed.py  test_slash.py  test_ui_state.py  test_utf8_shell_env.py  test_verify_room_pi.py  test_workspace_chat.py
(+36 files in other folders)
