[project]
name = "room-tui"
version = "0.1.6"
description = "Room — local project workbench TUI (paper-derived and more)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "textual>=0.80",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
room = "room_tui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/room_tui"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
